# lab2-qt20-db-cmake

./: .gitignore  CMakeLists.txt  Lab2_Qt20_2026.docx  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/include/: myrect.h
app/src/: mainwindow.cpp  mainwindow.h  mydelegate.cpp  mydelegate.h
tests/: CMakeLists.txt  test_mainwindow.cpp  test_mydelegate.cpp  test_smoke.cpp
